#770: allow SnapshotCheckType.FULL to be recorded on Squash